# deep-cloud

./: .gitignore  Cargo.toml  README.md
deepcloud/: manage.py
deepcloud/deepcloud/: asgi.py  settings.py  urls.py  wsgi.py
deepcloud/files/: views.py
deepcloud/files/static/files/css/: style.min.css
deepcloud/files/templates/files/: add.html
src/: main.rs
templates/: login.hbs
