[package]
name = "home-server"
version = "0.1.0"
authors = ["aurelien"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates"]
